--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Graphic Designer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Ontario, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to draw and play video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creating graphics, developing sites and apps.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I Live in Rialto, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to give function to the images I create, help people communicate from their computers and mobiles.</p>
     </section>
 
     <footer id="footer">
